Added new tasks to README

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,17 @@
   <h1>Shopular</h1>
 
   <main ng-controller='InventoryController as inventoryCtrl'>
+    <form>
+
+
+
+
+
+
+    </form>
+
+
+
     <table class='table table-striped col-lg-8'>
       <thead>
         <tr>
