Added ability to sort table ascending or descending on price, quantity and name

--- a/src/index.html
+++ b/src/index.html
@@ -55,15 +55,30 @@
     <table class='table table-striped col-lg-8'>
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Price</th>
-          <th>Quantity</th>
+          <th>
+            <a href="#" ng-click="sortType = 'name'; sortReverse = !sortReverse">
+            Name
+            <p ng-show="sortType == 'name' && !sortReverse" class="fa fa-caret-down"></p>
+            <p ng-show="sortType == 'name' && sortReverse" class="fa fa-caret-up"></p>
+          </th>
+          <th>
+            <a href="#" ng-click="sortType = 'price'; sortReverse = !sortReverse">
+            Price
+            <p ng-show="sortType == 'price' && !sortReverse" class="fa fa-caret-down"></p>
+            <p ng-show="sortType == 'price' && sortReverse" class="fa fa-caret-up"></p>
+          </th>
+          <th>
+            <a href="#" ng-click="sortType = 'quantity'; sortReverse = !sortReverse">
+            Quantity
+            <p ng-show="sortType == 'quantity' && !sortReverse" class="fa fa-caret-down"></p>
+            <p ng-show="sortType == 'quantity' && sortReverse" class="fa fa-caret-up"></p>
+          </th>
           <th>Color</th>
         </tr>
       </thead>
 
       <tbody>
-        <tr ng-repeat='item in inventoryCtrl.inventory'>
+        <tr ng-repeat='item in inventoryCtrl.inventory | orderBy:inventoryCtrl.sortType:sortReverse'>
           <td class='name'>{{item.name}}</td>
           <td>{{inventoryCtrl.getNewPrice(item) | currency:"$" }}
           <img ng-show='item.discount > 0 ' src='img/saleicon.png'>
