--- a/src/index.html
+++ b/src/index.html
@@ -18,39 +18,44 @@
           ng-submit='additem.$valid && inventoryCtrl.addItem(inventoryCtrl.newItem)'
           novalidate>
 
-      <p ng-show='additem.name.$touched && !additem.name.$valid'>Please enter an item name.</p>
-      <p ng-show='additem.price.$touched && !additem.price.$valid'>Please enter an item price.</p>
-      <p ng-show='additem.quantity.$touched && !additem.quantity.$valid'>Please enter an item quantity.</p>
-      <p ng-show='additem.color.$touched && !additem.color.$valid'>Please enter an item color.</p>
-      <p ng-show='additem.discount.$touched && !additem.discount.$valid'>Please enter an item discount.</p>
+      <p ng-show='additem.name.$touched && !additem.name$valid'>Please enter an item name.</p>
+      <p ng-show='additem.price.$touched && !additem.price$valid'>Please enter an item price.</p>
+      <p ng-show='additem.quantity.$touched && !additem.quantity$valid'>Please enter an item quantity.</p>
+      <p ng-show='additem.color.$touched && !additem.color$valid'>Please enter an item color.</p>
+      <p ng-show='additem.discount.$touched && !additem.discount$valid'>Please enter an item discount.</p>
 
       <input
         type='text'
         placeholder='Name'
         required
+        name='name'
         ng-model='inventoryCtrl.newItem.name'>
       <input
         type='number'
         placeholder='Price'
         min='0'
         required
+        name='price'
         ng-model='inventoryCtrl.newItem.price'>
       <input
         type='number'
         placeholder='Quantity'
         min='0'
         required
+        name='quantity'
         ng-model='inventoryCtrl.newItem.quantity'>
       <input
         type='text'
         placeholder='Color'
         required
+        name='color'
         ng-model='inventoryCtrl.newItem.color'>
       <input
         type='number'
         placeholder='Discount'
         min='0'
         required
+        name='discount'
         ng-model='inventoryCtrl.newItem.discount'>
       <input
         type='submit'
@@ -60,14 +65,16 @@
     <h2>Inventory List</h2>
     <table class='table table-striped col-lg-8'>
       <thead>
-          <th ng-click='inventoryCtrl.changeSort('name')'>Name</th>
-          <th ng-click='inventoryCtrl.changeSort('price')'>Price</th>
-          <th ng-click='inventoryCtrl.changeSort('quantity')'>Quantity</th>
+        <tr>
+          <th ng-click='inventoryCtrl.changeSort("name")'>Name</th>
+          <th ng-click='inventoryCtrl.changeSort("price")'>Price</th>
+          <th ng-click='inventoryCtrl.changeSort("quantity")'>Quantity</th>
           <th>Color</th>
+        </tr>
       </thead>
 
       <tbody>
-        <tr ng-repeat='item in inventoryCtrl.inventory | orderBy:inventoryCtrl.sortType:sortReverse'>
+        <tr ng-repeat='item in inventoryCtrl.inventory | orderBy:inventoryCtrl.sortType:inventoryCtrl.sortReverse'>
           <td class='name'>{{item.name}}</td>
           <td>{{inventoryCtrl.getNewPrice(item) | currency:"$" }}
             <img ng-show='item.discount > 0 ' src='img/saleicon.png'>
@@ -86,6 +93,8 @@
   <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js'></script>
   <script src='/js/inventory.module.js'></script>
   <script src='/js/inventory.controller.js'></script>
+  <!-- <script src='/js/item.controller.js'></script>
+  <script src='/js/item.service.js'></script> -->
 
 </body>
 </html>
