--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,15 @@
   <meta name='author' content='Jennifer Oakes'>
 </head>
 <body>
-
-  <h1>Shopular Inventory</h1>
+  <header>
+    <h1>Shopular Inventory</h1>
+    <form name='loginform'>
+      <input type='text' placeholder='Username'>
+      <button class='btn'>Login</button>
+    </form>
+    <p>{{}}</p>
+    <button class='btn'>Logout</button>
+  </header>
 
   <main ng-controller='InventoryController as inventoryCtrl'>
     <form name='additem'
@@ -88,12 +95,13 @@
 
   <footer>
     <p>Thanks for shopping by!</p>
+    <p>&copy; Shopular</p>
   </footer>
 
   <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js'></script>
   <script src='/js/inventory.module.js'></script>
   <script src='/js/inventory.controller.js'></script>
-  <script src='/js/inventory.service.js'></script> 
+  <script src='/js/inventory.service.js'></script>
 
 </body>
 </html>
