--- a/src/index.html
+++ b/src/index.html
@@ -10,60 +10,75 @@
   <meta name='author' content='Jennifer Oakes'>
 </head>
 <body>
-  <header ng-controller='LoginController as loginCtrl'>
+  <header ng-controller='LoginController as loginCtrl' class='page-header'>
     <h1>Shopular</h1>
-    <form name='loginform' ng-submit=' '>
-      <input type='text' placeholder='Username'>
-      <input class='btn' type='submit' value='Login'>
+    <form name='loginform' class='form-group form-inline' ng-submit=' '>
+      <input type='text' class='form-control' placeholder='Username'>
+      <input class='btn' class='form-control btn btn-primary loginForm' type='submit' value='Login'>
     </form>
     <p>{{}}</p>
     <button class='btn'>Logout</button>
   </header>
 
-  <main ng-controller='InventoryController as inventoryCtrl'>
+  <main ng-controller='InventoryController as inventoryCtrl' class='container'>
     <form name='additem'
           ng-submit='additem.$valid && inventoryCtrl.addItem(inventoryCtrl.newItem) && additem.$setUntouched()'
           novalidate>
 
-      <p ng-show='additem.name.$touched && !additem.name.$valid'>Please enter an item name.</p>
-      <p ng-show='additem.price.$touched && !additem.price.$valid'>Please enter an item price.</p>
-      <p ng-show='additem.quantity.$touched && !additem.quantity.$valid'>Please enter an item quantity.</p>
-      <p ng-show='additem.discount.$touched && !additem.discount.$valid'>Please enter an item discount.</p>
+      <p ng-show='additem.name.$touched && !additem.name.$valid' class='alert alert-warning'>Please enter an item name.</p>
+      <p ng-show='additem.price.$touched && !additem.price.$valid' class='alert alert-warning'>Please enter an item price.</p>
+      <p ng-show='additem.quantity.$touched && !additem.quantity.$valid' class='alert alert-warning'>Please enter an item quantity.</p>
+      <p ng-show='additem.discount.$touched && !additem.discount.$valid' class='alert alert-warning'>Please enter an item discount.</p>
 
+      <label for='name'>Item Name</label>
       <input
         type='text'
+        class='form-control'
         placeholder='Name'
         required
         name='name'
         ng-model='inventoryCtrl.newItem.name'>
+
+      <lable for='price'>Item Price</label>
       <input
         type='number'
-        placeholder='Price'
+        class='form-control'
+        placeholder='0.00'
         min='0'
         required
         name='price'
         ng-model='inventoryCtrl.newItem.price'>
+
+      <label for='color'>Item Color</label>
       <input
         type='number'
-        placeholder='Quantity'
+        class='form-control'
+        placeholder='0'
         min='0'
         required
         name='quantity'
         ng-model='inventoryCtrl.newItem.quantity'>
+
+      <label for='color'>Item Color</label>
       <input
         type='text'
+        class='form-control'
         placeholder='Color'
         name='color'
         ng-model='inventoryCtrl.newItem.color'>
+
+      <label for='discount'>Item Discount</label>
       <input
         type='number'
-        placeholder='Discount'
+        class='form-control'
+        placeholder='0'
         min='0'
         required
         name='discount'
         ng-model='inventoryCtrl.newItem.discount'>
       <input
         type='submit'
+        class='form-control btn btn-primary submitBtn'
         value='Add Item'>
     </form>
 
