--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 <body>
   <header ng-controller='LoginController as loginCtrl' class='page-header'>
     <h1>Shopular</h1>
-    <form name='loginform' class='form-group form-inline' ng-submit=' '>
-      <input type='text' class='form-control' placeholder='Username'>
-      <input class='btn' class='form-control btn btn-primary loginForm' type='submit' value='Login'>
+    <form name='loginform' class='form-group form-inline' ng-submit='loginform.$valid && loginCtrl.login(loginCtrl.user)'>
+      <input type='text' class='form-control' placeholder='Username' ng-model='loginCtrl.user.username' ng-show='!loginCtrl.loggedInStatus'>
+      <input class='btn' type='submit' value='Login' ng-show='!loginCtrl.loggedInStatus'>
+      <input class='btn' type='submit' value='Logout' ng-show='loginCtrl.loggedInStatus'>
     </form>
-    <p>{{}}</p>
-    <button class='btn'>Logout</button>
+    <p ng-show='loginCtrl.loggedInStatus'>{{loginCtrl.loggedIn.username}} logged in on {{loginCtrl.loggedIn.time | date:'short' }}</p>
   </header>
 
   <main ng-controller='InventoryController as inventoryCtrl' class='container'>
