Changed login/logout functionality to toggle back and forth on click

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
         name='price'
         ng-model='inventoryCtrl.newItem.price'>
 
-      <label for='color'>Item Color</label>
+      <label for='color'>Item Quantity</label>
       <input
         type='number'
         class='form-control'
